fix: buttons align with graph

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1809,6 +1809,14 @@ video {
   padding-left: 2rem;
 }
 
+.pl-10 {
+  padding-left: 2.5rem;
+}
+
+.pl-12 {
+  padding-left: 3rem;
+}
+
 .text-left {
   text-align: left;
 }
